--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>About Us | Policewallah Saman</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -73,4 +74,5 @@
 
 </body>
 </html>
+
 
