--- a/about.html
+++ b/about.html
@@ -48,6 +48,7 @@ function toggleMenu() {
 
 <!-- MOBILE MENU -->
 <div class="mobile-menu" id="mobileMenu">
+  <a href="index.html">Home</a>
   <a href="about.html">About Us</a>
   <a href="contact.html">Contact Us</a>
   <a href="https://www.instagram.com/policewallah_saman/" target="_blank">Instagram</a>
@@ -83,6 +84,7 @@ function toggleMenu() {
 
 </body>
 </html>
+
 
 
 
