--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@ function toggleMenu() {
 
 <!-- MOBILE MENU -->
 <div class="mobile-menu" id="mobileMenu">
+  <a href="index.html">Home</a>
   <a href="about.html">About Us</a>
   <a href="contact.html">Contact Us</a>
   <a href="https://www.instagram.com/policewallah_saman/" target="_blank">Instagram</a>
@@ -324,3 +325,4 @@ function openProduct(name, desc, img, price, size) {
 
 </body>
 </html>
+
