--- a/product.html
+++ b/product.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Product Details</title>
+<link rel="stylesheet" href="style.css">
 <span class="rp-badge">Rajasthan Police</span>
 
 <style>
@@ -76,3 +77,4 @@ function order() {
 
 </body>
 </html>
+
