--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@ function toggleMenu() {
 <!-- TOP HEADER -->
 <div class="top-bar">
   <div class="top-left">
-    <a href="index.html">
-      <img src="images/logo.jpeg" alt="Policewallah Store" class="top-logo">
-    </a>
-
-  </div>
+  <a href="index.html" class="brand">
+    <img src="images/logo.jpeg" alt="Policewallah Store" class="top-logo">
+    <span class="brand-name">Policewallah Store</span>
+  </a>
+</div>
 
   <div class="top-right">
     <!-- Desktop icons -->
@@ -322,5 +322,6 @@ function openProduct(name, desc, img, price, size) {
 
 </body>
 </html>
+
 
 
