--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>About Us | Policewallah Saman</title>
+  <title>About Us | Policewallah Stroe</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -57,10 +57,10 @@ function toggleMenu() {
 
 <!-- PAGE CONTENT -->
 <div class="page-container">
-  <h1>About Policewallah Saman</h1>
+  <h1>About Policewallah Store</h1>
 
   <p>
-    <strong>Policewallah Saman</strong> is a dedicated store for
+    <strong>Policewallah Store</strong> is a dedicated store for
     <strong>Rajasthan Police uniforms and accessories</strong>.
   </p>
 
@@ -84,6 +84,7 @@ function toggleMenu() {
 
 </body>
 </html>
+
 
 
 
