--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Contact Us | Policewallah Saman</title>
+  <title>Contact Us | Policewallah Store</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -80,6 +80,7 @@ function toggleMenu() {
 
 </body>
 </html>
+
 
 
 
