--- a/product.html
+++ b/product.html
@@ -45,6 +45,7 @@ button {
   <div class="top-left">
     <a href="index.html">
       <img src="images/logo.jpeg" alt="Policewallah Store" class="top-logo">
+        <span class="brand-name">Policewallah Store</span>
     </a>
 
   </div>
@@ -120,6 +121,7 @@ function order() {
 
 </body>
 </html>
+
 
 
 
