--- a/product.html
+++ b/product.html
@@ -45,7 +45,7 @@ button {
   <div class="top-left">
     <a href="index.html">
       <img src="images/logo.jpeg" alt="Policewallah Store" class="top-logo">
-        <span class="brand-name">Policewallah Store</span>
+        
     </a>
 
   </div>
@@ -71,6 +71,7 @@ button {
 
 <!-- MOBILE MENU -->
 <div class="mobile-menu" id="mobileMenu">
+    <a href="index.html">Home</a>
   <a href="about.html">About Us</a>
   <a href="contact.html">Contact Us</a>
   <a href="https://www.instagram.com/policewallah_saman/" target="_blank">Instagram</a>
@@ -121,6 +122,7 @@ function order() {
 
 </body>
 </html>
+
 
 
 
