--- a/contact.html
+++ b/contact.html
@@ -23,6 +23,7 @@ function toggleMenu() {
   <div class="top-left">
     <a href="index.html">
       <img src="images/logo.jpeg" alt="Policewallah Store" class="top-logo">
+      <span class="brand-name">Policewallah Store</span>
     </a>
 
   </div>
@@ -80,6 +81,7 @@ function toggleMenu() {
 
 </body>
 </html>
+
 
 
 
